--- a/src/index.css
+++ b/src/index.css
@@ -301,7 +301,7 @@ section {
     }
   }
 
-  .footer {
+  footer {
     @apply my-10 md:mt-20 mt-10 text-white-50 px-5 md:px-20 xl:px-20 flex items-center justify-center;
 
     .footer-container {
